Update prompt to exclude partially cropped photos at image edges

--- a/Nova_Pro_Yearbook_BoundingBox.ipynb
+++ b/Nova_Pro_Yearbook_BoundingBox.ipynb
@@ -220,10 +220,17 @@
     "    - Individual portrait photos (headshots of students)\n",
     "    - Accurate bounding boxes for each separate photo\n",
     "    - Distinguishing between individual photos even in tight grids\n",
+    "    - ONLY detect COMPLETE photos that are fully visible within the image boundaries\n",
+    "    - EXCLUDE any photos that are partially cut off or cropped at the edges of the image\n",
     "\"\"\")\n",
     "\n",
     "instruction = dedent(\"\"\"\\\n",
     "    Detect all individual portrait photos in this yearbook page.\n",
+    "    \n",
+    "    IMPORTANT: Only detect COMPLETE portrait photos. Do NOT include any photos that are:\n",
+    "    - Partially cut off at the edges of the image\n",
+    "    - Cropped or incomplete\n",
+    "    - Only partially visible\n",
     "    \n",
     "    Return a JSON response with this exact structure:\n",
     "    {\n",
@@ -243,6 +250,8 @@
     "    \n",
     "    Rules:\n",
     "    - Detect EACH individual portrait separately\n",
+    "    - ONLY include COMPLETE photos that are fully visible\n",
+    "    - SKIP any photos that are cut off at image edges\n",
     "    - Provide accurate bounding boxes in pixel coordinates\n",
     "    - Return clean JSON only (no markdown, no extra text)\n",
     "    - Number photos sequentially (photo_1, photo_2, etc.)\n",
